tests/errors/deque_get_oob_panics.ptt
use std/deque

spark {
  d is Deque of int()
  d.push_back(1)
  d.get(5)
}
